# fco-ai-analyzer

./: .dockerignore  Dockerfile  README.md  fco_ai_analyzer.sqlite3  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
data/: seed_log.txt
reports/: report.html  report.xlsx
scripts/: seed_and_analyze.py
src/fco_ai_analyzer/: __init__.py  bayesian.py  cli.py  features.py  history.py  markov.py  ml.py  models.py  parser.py  patterns.py  pipeline.py  prediction.py  reporting.py  statistics.py  storage.py
src/fco_ai_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_history_and_ingestion.py  test_parser.py  test_prediction.py  test_storage.py
