[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fco-ai-analyzer"
version = "0.1.0"
description = "Production-ready FC Online log analyzer for shot timing and success pattern discovery"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "FCO AI Analyzer"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "streamlit>=1.36",
  "openpyxl>=3.1",
  "xlsxwriter>=3.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.22",
  "jinja2>=3.1",
  "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
fco-ai-analyzer = "fco_ai_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
